[gd_scene load_steps=3 format=3 uid="uid://dd3na2bk4uedu"]

[ext_resource type="Script" path="res://Scripts/WhileLoopItem.gd" id="1_x2gq2"]
[ext_resource type="Texture2D" uid="uid://bqlovvk7qk3r6" path="res://Sprites/CodeBlockSprites/whileLoop.png" id="2_u6hsc"]

[node name="WhileLoopItem" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_x2gq2")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HeaderHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HeaderHBox"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_u6hsc")

[node name="BlockContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
